Abonelik entegrasyonu - grafikler eklendi

--- a/src/SmartReceipt.API/appsettings.Example.json
+++ b/src/SmartReceipt.API/appsettings.Example.json
@@ -15,6 +15,26 @@
     "Model": "gemini-1.5-flash",
     "MaxTokens": 4096,
     "Temperature": 0.1
+  },
+  "JwtSettings": {
+    "Secret": "YOUR_JWT_SECRET_KEY_HERE_MINIMUM_32_CHARACTERS",
+    "Issuer": "SmartReceipt",
+    "Audience": "SmartReceiptUsers",
+    "ExpirationMinutes": 60,
+    "RefreshExpirationDays": 7
+  },
+  "PaymentSettings": {
+    "IyzicoApiKey": "YOUR_IYZICO_API_KEY",
+    "IyzicoSecretKey": "YOUR_IYZICO_SECRET_KEY",
+    "IyzicoBaseUrl": "https://api.iyzipay.com",
+    "IyzicoUseSandbox": true,
+    "StripeApiKey": "YOUR_STRIPE_API_KEY",
+    "StripeSecretKey": "YOUR_STRIPE_SECRET_KEY",
+    "StripeWebhookSecret": "YOUR_STRIPE_WEBHOOK_SECRET",
+    "PayPalClientId": "YOUR_PAYPAL_CLIENT_ID",
+    "PayPalClientSecret": "YOUR_PAYPAL_CLIENT_SECRET",
+    "PayPalUseSandbox": true,
+    "DefaultCurrency": "TRY"
   }
 }
 
